# MoleKing

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  pull_request_template.md  pyproject.toml  pytest.ini  setup.py
.github/: labeler.yml  updateVersion.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: BuildWheels.yml  labeler.yml
MoleKing/: CMakeLists.txt  setup.py
MoleKing/archive/: meusetup.py
MoleKing/src/: MoleKingConfig.hpp.in  main.cpp
MoleKing/src/berny/: CMakeLists.txt  Hessian.cpp  Hessian.hpp
MoleKing/src/chemicalUnits/: AtomicScale.cpp  AtomicScale.hpp  Field.hpp  Molecule.hpp  OPLSff.cpp  OPLSff.hpp  PeriodicTable.cpp  PeriodicTable.hpp
MoleKing/src/myMath/: CMakeLists.txt  Geometry.cpp  MassCenter.cpp  MassCenter.hpp  Matrix.cpp  Matrix.hpp
MoleKing/src/outputProcess/: CMakeLists.txt
MoleKing_util/: CMakeLists.txt  makefile  setup.py
MoleKing_util/docs/: LICENSE  README.md
MoleKing_util/src/: CMakeLists.txt  main.cpp
MoleKing_util/src/berny/: CMakeLists.txt  Hessian.hpp
MoleKing_util/src/chemicalUnits/: AtomicScale.hpp  CMakeLists.txt  Field.hpp  Molecule.cpp  Molecule.hpp  PeriodicTable.cpp  PeriodicTable.hpp  SupraMolecule.cpp  SupraMolecule.hpp
MoleKing_util/src/math/: CMakeLists.txt  Geometry.hpp  MassCenter.cpp  Matrix.cpp  Matrix.hpp  Vectors.cpp  Vectors.hpp
MoleKing_util/src/myMath/: CMakeLists.txt  Vectors.cpp
MoleKing_util/src/outputProcess/: CMakeLists.txt  G16Process.cpp  G16Process.hpp
archive/: ChemicalunitsCMakeLists.txt  SRC_CMakeLists.txt  mewsetup_cmake.py  outputProcessCMakeLists.txt  pyproject.toml
moleking-1.6.0.dist-info/: METADATA  RECORD  direct_url.json  top_level.txt
src/: MoleKingConfig.hpp.in  main.cpp  main2.cpp
src/MoleKing/: __init__.py
src/berny/: Hessian.cpp  Hessian.hpp
src/chemicalUnits/: AtomicScale.cpp  AtomicScale.hpp  CMakeLists.txt  Field.hpp  Molecule.cpp  Molecule.hpp  OPLSff.cpp  OPLSff.hpp  PeriodicTable.cpp  PeriodicTable.hpp  SampleMolecules.cpp  SampleMolecules.hpp  SupraMolecule.cpp  SupraMolecule.hpp  pov.cpp  pov.hpp
src/myMath/: Geometry.cpp  Geometry.hpp  MassCenter.cpp  MassCenter.hpp  Matrix.cpp  Matrix.hpp  Vectors.cpp  Vectors.hpp
src/outputProcess/: CMakeLists.txt  G16Process.cpp  G16Process.hpp  OrcaProcess.cpp  OrcaProcess.hpp  Psi4Process.cpp  Psi4Process.hpp  Testing.cpp  Testing.hpp
src/outputProcess/OLD/: OLD_Thiag_main  OLD_Thiago.cpp  OLD_Thiago.hpp
test/: ExtractAlphaFreq.py  MK_Test.out  test_molecule.py  test_output.py
tests/: old_output.py  test_molecule.py  test_output.py  toremove.py
