[build-system]
requires = [
    "setuptools>=66",
    "wheel",
    "ninja",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "MoleKing"
dynamic = ["version"]
description = "A pybind11-powered toolkit that brings theoretical chemistry constructs (molecules, atoms, Gaussian/Psi4 IO) into Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "LEEDMOL Research Group", email = "mateus_barbosa@ufg.br" },
]
keywords = ["chemistry", "pybind11", "gaussian", "psi4", "molecules"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.setuptools]
packages = []
py-modules = []
include-package-data = false

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]


[tool.cibuildwheel]
# Configurações globais (aplicam-se a todas as plataformas)
test-command = "pytest {project}/tests"
test-extras = ["test"]
before-build = "rm -rf {project}/build"
before-all = "pip install -y python3.12-devel"

[tool.cibuildwheel.windows]
test-skip = "*"
# [tool.cibuildwheel.windows]
# test-command = "pytest {project}/tests"
# test-extras = ["test"]
# before-build = "rmdir /s /q {project}\\build"

[tool.cibuildwheel.macos]
test-skip = "*"
# [tool.cibuildwheel.macos]
# test-command = "pytest {project}/tests"
# test-extras = ["test"]
# before-build = "rm -rf {project}/build"


[tool.ruff]
extend-select = [
  "B",    # flake8-bugbear
  "B904",
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]